...
                              indicatorWeight: 2.0,
                              tabs: [
                                Tab(
                                  text: 'Signup',
                                ),
                                Tab(
                                  key: ValueKey('LoginTab_giet'),
                                  text: 'Login',
                                ),
                              ],
                              controller: _model.tabBarController,
                              onTap: (i) async {
                                [() async {}, () async {}][i]();
...
                                  child: Column(
                                    mainAxisSize: MainAxisSize.max,
                                    children: [
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('SignUpEmail_uigm'),
                                          controller:
                                              _model.signUpEmailTextController,
                                          focusNode:
                                              _model.signUpEmailFocusNode,
                                          onChanged: (_) =>
                                              EasyDebounce.debounce(
...
                                              .asValidator(context),
                                        ),
                                      ),
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('SignupPassword_5py5'),
                                          controller: _model
                                              .signupPasswordTextController,
                                          focusNode:
                                              _model.signupPasswordFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.next,
...
                                              .asValidator(context),
                                        ),
                                      ),
                                      Container(
                                        width: double.infinity,
                                        child: TextFormField(
                                          key: ValueKey('SignUpConfirm_ggcb'),
                                          controller: _model
                                              .signUpConfirmTextController,
                                          focusNode:
                                              _model.signUpConfirmFocusNode,
                                          autofocus: false,
                                          textInputAction: TextInputAction.done,
...
                                Column(
                                  mainAxisSize: MainAxisSize.max,
                                  children: [
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('LoginEmail_z4g2'),
                                        controller:
                                            _model.loginEmailTextController,
                                        focusNode: _model.loginEmailFocusNode,
                                        onChanged: (_) => EasyDebounce.debounce(
                                          '_model.loginEmailTextController',
                                          Duration(milliseconds: 2000),
...
                                        ],
                                      ),
                                    ),
                                    Container(
                                      width: double.infinity,
                                      child: TextFormField(
                                        key: ValueKey('LoginPassword_950w'),
                                        controller:
                                            _model.loginPasswordTextController,
                                        focusNode:
                                            _model.loginPasswordFocusNode,
                                        autofocus: false,
                                        textInputAction: TextInputAction.done,
...
                      ),
                    ),
                    Stack(
                      children: [
                        if (_model.tabBarCurrentIndex == 1)
                          FFButtonWidget(
                            key: ValueKey('LoginButton_styz'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'LOGIN_SIGNUP_LoginButton_ON_TAP');
                              logFirebaseEvent('LoginButton_auth');
                              GoRouter.of(context).prepareAuthEvent();

...
                              ),
                              borderRadius: BorderRadius.circular(24.0),
                            ),
                          ),
                        if (_model.tabBarCurrentIndex == 0)
                          FFButtonWidget(
                            key: ValueKey('SignUpButton_2nw2'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'LOGIN_SIGNUP_SignUpButton_ON_TAP');
                              logFirebaseEvent('SignUpButton_auth');
                              GoRouter.of(context).prepareAuthEvent();
                              if (_model.signupPasswordTextController.text !=
...
