...
                              },
                            ),
                          ],
                        ),
                      ),
                      Text(
                        'Profile',
                        style: FlutterFlowTheme.of(context).bodyMedium.override(
                              font: GoogleFonts.inter(
                                fontWeight: FlutterFlowTheme.of(context)
                                    .bodyMedium
                                    .fontWeight,
                                fontStyle: FlutterFlowTheme.of(context)
...
                        mainAxisSize: MainAxisSize.max,
                        mainAxisAlignment: MainAxisAlignment.start,
                        children: [
                          Container(
                            width: double.infinity,
                            child: TextFormField(
                              key: ValueKey('FirstName_89sc'),
                              controller: _model.firstNameTextController,
                              focusNode: _model.firstNameFocusNode,
                              autofocus: false,
                              enabled: true,
                              obscureText: false,
                              decoration: InputDecoration(
...
                                  .asValidator(context),
                            ),
                          ),
                          Container(
                            width: double.infinity,
                            child: TextFormField(
                              key: ValueKey('LastName_it8o'),
                              controller: _model.lastNameTextController,
                              focusNode: _model.lastNameFocusNode,
                              autofocus: false,
                              enabled: true,
                              obscureText: false,
                              decoration: InputDecoration(
...
                                  .asValidator(context),
                            ),
                          ),
                          Container(
                            width: double.infinity,
                            child: TextFormField(
                              key: ValueKey('AboutMe_oycn'),
                              controller: _model.aboutMeTextController,
                              focusNode: _model.aboutMeFocusNode,
                              autofocus: false,
                              enabled: true,
                              obscureText: false,
                              decoration: InputDecoration(
...
                              enableInteractiveSelection: true,
                              validator: _model.aboutMeTextControllerValidator
                                  .asValidator(context),
                            ),
                          ),
                          FFButtonWidget(
                            key: ValueKey('Birthday_wvtv'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'PROFILE_CREATION_ABOUT_ME_Birthday_ON_TA');
                              logFirebaseEvent('Birthday_date_time_picker');
                              final _datePickedDate = await showDatePicker(
                                context: context,
...
                                color: Color(0xFFB7410E),
                              ),
                              borderRadius: BorderRadius.circular(24.0),
                            ),
                          ),
                          FFButtonWidget(
                            key: ValueKey('Next_4fa6'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'PROFILE_CREATION_ABOUT_ME_Next_ON_TAP');
                              logFirebaseEvent('Next_backend_call');

                              await currentUserReference!
...
