...
                    autovalidateMode: AutovalidateMode.disabled,
                    child: Column(
                      mainAxisSize: MainAxisSize.max,
                      mainAxisAlignment: MainAxisAlignment.start,
                      children: [
                        Text(
                          'Choose Your School',
                          style:
                              FlutterFlowTheme.of(context).bodyMedium.override(
                                    font: GoogleFonts.inter(
                                      fontWeight: FlutterFlowTheme.of(context)
                                          .bodyMedium
                                          .fontWeight,
...
                                  ),
                        ),
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              12.0, 0.0, 12.0, 0.0),
                          child: FlutterFlowDropDown<String>(
                            key: ValueKey('SchoolSelect_ckna'),
                            controller: _model.schoolSelectValueController ??=
                                FormFieldController<String>(null),
                            options: ['University of Rhode Island'],
                            onChanged: (val) => safeSetState(
                                () => _model.schoolSelectValue = val),
                            height: 40.0,
...
                          ),
                        ),
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              12.0, 0.0, 12.0, 0.0),
                          child: FlutterFlowDropDown<String>(
                            key: ValueKey('MajorSelect_v843'),
                            controller: _model.majorSelectValueController ??=
                                FormFieldController<String>(null),
                            options: FFAppState().MajorList,
                            onChanged: (val) => safeSetState(
                                () => _model.majorSelectValue = val),
                            width: double.infinity,
...
                          ),
                        ),
                        Padding(
                          padding: EdgeInsetsDirectional.fromSTEB(
                              36.0, 0.0, 36.0, 0.0),
                          child: TextFormField(
                            key: ValueKey('SchoolYear_tyi1'),
                            controller: _model.schoolYearTextController,
                            focusNode: _model.schoolYearFocusNode,
                            autofocus: false,
                            enabled: true,
                            obscureText: false,
                            decoration: InputDecoration(
...
                            inputFormatters: [
                              FilteringTextInputFormatter.allow(RegExp('[0-9]'))
                            ],
                          ),
                        ),
                        FFButtonWidget(
                          key: ValueKey('Submit_uw1s'),
                          onPressed: () async {
                            logFirebaseEvent(
                                'PROFILE_CREATION_SCHOOL_SELECT_Submit_ON');
                            logFirebaseEvent('Submit_validate_form');
                            if (_model.formKey.currentState == null ||
                                !_model.formKey.currentState!.validate()) {
...
