...
                            FlutterFlowTheme.of(context).bodyMedium.fontWeight,
                        fontStyle:
                            FlutterFlowTheme.of(context).bodyMedium.fontStyle,
                      ),
                ),
                FlutterFlowChoiceChips(
                  key: ValueKey('InterestChips_lq6v'),
                  options: [
                    ChipData('Reading'),
                    ChipData('Baking'),
                    ChipData('Hiking'),
                    ChipData('Video Games'),
                    ChipData('Music'),
...
                    isMultiSelect: true,
                    onMultiSelectChanged: (val) =>
                        safeSetState(() => _model.interestsDropDownValue = val),
                  ),
                ),
                FFButtonWidget(
                  key: ValueKey('FinishButton_dotu'),
                  onPressed: () async {
                    logFirebaseEvent(
                        'PROFILE_CREATION_SELECT_INTERESTS_Finish');
                    logFirebaseEvent('FinishButton_backend_call');

                    await currentUserReference!.update({
...
